--- a/css/start.css
+++ b/css/start.css
@@ -32,7 +32,6 @@ body {
 .shade-text-box p {
   color: white;
   text-align: center;
-  /* padding-top: 0.em; */
   padding: 0;
   margin: 0;
   font-size: min(7vw, 2em);
@@ -51,7 +50,7 @@ body {
   padding: 1px;
   margin: 1em;
   cursor: pointer;
-  -webkit-filter: drop-shadow( 0px 0px 0px rgba(0,0,0,0) );
+  -webkit-filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0));
 }
 
 #codeError {
