--- a/css/start.css
+++ b/css/start.css
@@ -2,7 +2,7 @@ body {
   height: 100vh;
   bottom: 0;
   align-items: center;
-  background: url('../img/bg_1_whole.png');
+  background: url('../img/bg/bg_1_whole.png');
   background-position: relative;
   background-size: cover;
   background-repeat: no-repeat;
